add roles table and routes
